-Updated to-do -Fixed prod image shrinking on narrow screens -Fixed bug in cart about warning of NaN -Added some animations to links -Flashing msg to login in cart -table design improved for small screens -removed total from cart to fit on small screens -intro font min max -stock update in db after purchase -update products from db after save

--- a/src/App.css
+++ b/src/App.css
@@ -25,11 +25,12 @@ body {
   display: flex;  
   justify-content: center;
   text-align: center;
-  font-size: 6vw;
+  font-size: clamp(16px, 4vw ,40px);
   font-weight: 800;
 }
-.intro-title:hover {  
-  text-decoration: underline dotted 1px;
+div.intro-title p:hover {  
+  border:#000 dotted 1px;
+  border-radius: 6px;
 }
 .intro-content {
   display: flex;
@@ -39,6 +40,7 @@ body {
   cursor: pointer;
   width: 24vw;
   min-width: 140px;
+  max-width: 240px;
 }
 
 
@@ -235,7 +237,6 @@ body {
   margin-right: -12px;
   font-size: 14px;
   font-weight: 200;
-  
   padding: 6px;
   background-color: rgba(0, 0, 0, 0.8);
   color:rgba(253, 243, 185, 0.9);
@@ -245,6 +246,7 @@ body {
     -2px 4px 12px 0px rgba(0, 0, 0, 0.9)   
     ;
     
+  
 }
 .content-cart-footer {
   padding-top: 12px;
@@ -301,16 +303,52 @@ body {
   letter-spacing: 1px;
   
 }
+.content a {
+  text-decoration: underline;
+  color: inherit;
+  display: inline-block;
+}
 .link {
   cursor: pointer;  
 }
-.link:hover {
+.link:hover, .link_u:hover, .content a:hover {
   border: 1px dotted #000;
   border-radius: 6px;
+  animation: shaker 0.82s cubic-bezier(.36,.07,.19,.97) both;
+  transform: translate3d(0, 0, 0);
+  backface-visibility: hidden;
+  perspective: 1000px;
 }
+.link_u {
+  cursor: pointer;
+  text-decoration: underline;
+}
+.blink {
+  animation: blinker 1.1s cubic-bezier(.5, 0, 1, 1) infinite alternate;
+}
+@keyframes blinker { to { opacity: 0.1; } }
+a#shake {
+  display:inline-block;
+}
+@keyframes shaker {
+  0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
+
+
 /********** products *********/
 .products {
   /* padding: 0px 12px 0px 12px; */
+  
 }
 .product-item-thumb {
   display: block;
@@ -320,9 +358,11 @@ body {
   border-radius: 6px;
   cursor: pointer;
   background-size:  cover;
+  white-space: nowrap;
 }
 .product-item {
   display: flex;
+  
   flex-direction: row;
   align-items: center;
   /* border-bottom: 2px solid #f5f0b3; */
@@ -530,13 +570,25 @@ body {
   display: table;
 }
 .orders_table  {
-  border: 1px solid  rgba(253, 243, 185, 1);
+ /*  border: 1px solid  rgba(253, 243, 185, 1); */
+  
 }
 .orders_table td {
  /*  border: 1px solid #FFF; */
   text-align: center;
-  padding: 2px 9px 2px 9px;
+  padding: 2px 6px 2px 6px;
+  font-size: clamp(11px, 1.6vw, 16px);
   
+}
+/* .orders_table td:empty {
+  visibility: hidden;
+  border: none;
+} */
+table.orders_table {
+  border: none;
+  border-collapse: separate;
+  empty-cells: hide;
+  border-spacing: 1px; 
 }
 .orders_table thead {
   background: rgb(58, 56, 45, 0.3);
@@ -545,9 +597,9 @@ body {
 .orders_table, .orders_table th, .orders_table td {
   border: 1px solid rgba(253, 243, 185, 1);
 }
-.orders_table {  
+/* .orders_table {  
   border-collapse: collapse;
-}
+} */
 .orders_table tbody, .orders_table tfoot {
   font-size: 14px;
   color: rgb(58, 56, 45, 1);
